package com.fastpay.domain.model.enums;

public enum KeyType {
    PHONE,
    EMAIL,
    RANDOM
}
