package com.fastpay.domain.model.enums;

public enum TransactionStatus {
    PROCESSING,
    COMPLETED,
    FAILED
}
